# opencem-competition-model

./: .gitignore  2 Sided Market Analysis.xlsx  2020.csv  calc_temp.py  fetch_example.sh  max_generator_size.py  peak_price_estimator.py  pyproject.toml  readme.md  run_all_years.sh  test_peak_price_estimator.py  two_sided_market_analyser.py  two_sied_market_results.csv  ~$2 Sided Market Analysis.xlsx
cemo/: const.py
nersi/: calculator.py  market.py
src/: competition_model.py  labelling.py  output.py  processing.py  tables.py
