[tool.poetry]
name = "opencem_competition"
version = "0.1.0"
description = "Competition analysis tools for OpenCEM capacity expansion model."
authors = ["Luke Marshall <lukasmarshall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
