[tool.poetry]
name = "opencem_competition"
version = "0.1.0"
description = "Competition analysis tools for OpenCEM capacity expansion model."
authors = ["Luke Marshall <lukasmarshall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
networkx = "^2.4"
matplotlib = "^3.1.2"
PTable = "^0.9.2"
nersi = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
